<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Disclaimer">

    <TextView
        android:id="@+id/item_donations_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/disclaimer"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_donations_txt"
        app:layout_constraintVertical_bias="0.02" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        app:layout_constraintBottom_toTopOf="@id/popi_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_feeding_the_furballs_app_was_developed_by_techforgood_exclusively_for_feeding_the_furballs_its_purpose_is_to_support_the_ngo_in_managing_donations_fostering_community_engagement_and_sharing_information_about_their_mission_to_help_homeless_animals_in_south_africa"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intellectual_property_ownership"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_app_s_features_including_but_not_limited_to_the_donation_goals_tracker_gallery_admin_controls_and_all_user_interactions_are_proprietary_to_techforgood_and_feeding_the_furballs_and_are_uniquely_designed_to_meet_the_organization_s_needs_any_duplication_or_unauthorized_use_of_these_features_is_strictly_prohibited"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_privacy"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_data_collected_within_this_app_is_handled_with_confidentiality_in_compliance_with_the_protection_of_personal_information_act_popia_users_are_responsible_for_the_accuracy_of_information_they_provide"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_conduct"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users_agree_to_use_the_app_responsibly_and_not_to_misuse_its_features_or_attempt_unauthorized_access_to_restricted_areas_misuse_may_result_in_access_restrictions"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modification_rights"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/techforgood_reserves_the_right_to_modify_or_update_features_terms_or_content_within_the_app_as_necessary_to_maintain_quality_and_functionality"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limitation_of_liability"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/while_designed_for_accuracy_and_reliability_techforgood_and_feeding_the_furballs_are_not_liable_for_temporary_outages_data_inaccuracies_or_any_loss_of_functionality_by_using_this_app_you_agree_to_respect_its_intellectual_property_and_terms_of_use"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintLongText" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/popi_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_popi_act"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/dark_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
