<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Admin_Item_Donations">

    <View
        android:id="@+id/rounded_rectangle_view"
        android:layout_width="350dp"
        android:layout_height="340dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/manage_item_donations_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_item_donations2"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_item_donations_txt"
        app:layout_constraintVertical_bias="0.02" />

    <Spinner
        android:id="@+id/name_spinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:popupBackground="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rounded_rectangle_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_rectangle_view"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/item"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/item"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rounded_rectangle_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_rectangle_view"
        app:layout_constraintTop_toBottomOf="@+id/name_spinner"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/contact_number"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="128dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rounded_rectangle_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_rectangle_view"
        app:layout_constraintTop_toBottomOf="@+id/item"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="68dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rounded_rectangle_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_rectangle_view"
        app:layout_constraintTop_toBottomOf="@+id/contact_number"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/delete_item_donation_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/delete_item_donation"
        app:layout_constraintBottom_toBottomOf="@+id/rounded_rectangle_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_rectangle_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_rectangle_view"
        app:layout_constraintTop_toBottomOf="@+id/email_address"
        app:layout_constraintVertical_bias="0.558" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounded_rectangle_view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/multidogs" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_a_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rounded_rectangle_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_rectangle_view"
        app:layout_constraintTop_toTopOf="@+id/rounded_rectangle_view"
        app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>
